--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "baseUrl": "./src",
     "typeRoots": [
       "node_modules/@types",
       "../node_modules/moment"
@@ -15,6 +16,11 @@
     "lib": [
       "es2016",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@models/*": ["app/models/*"],
+      "@components/*": ["app/components/*"],
+      "@services/*": ["app/services/*"]
+    }
   }
 }
